# CustomMaker

./: .env  .env.example  .gitignore  README.md  bordas.css  config.py  custommaker_config.json  debug_danbooru.py  debug_gemini.py  functions.py  main.py  main_qt.py  presets.json  pyproject.toml  requirements.txt  ui.py
legacy/: config.py  functions.py  ui.py
src/config/: settings.py
src/controllers/: batch_controller.py
src/core/: ai_pipeline.py  ai_provider.py  animation_processor.py  app_config.py  batch_worker.py  cache_manager.py  danbooru.py  editor_state.py  image_processor.py  logging_config.py  preset_manager.py  task_runner.py  uploader.py
src/qt/: __init__.py  app.py  compat.py  main_window.py  task_runner.py  theme.py
src/qt/dialogs/: __init__.py  danbooru_gallery_dialog.py  danbooru_image_viewer.py  progress_dialog.py
src/qt/tabs/: __init__.py  ai_tab.py  editor_tab.py  online_tab.py
src/qt/widgets/: __init__.py  danbooru_autocomplete.py  danbooru_grid.py  image_canvas.py  image_list_panel.py
src/ui/: ai_tab.py  autocomplete.py  danbooru_grid.py  main_window.py  online_search.py  styles.py  theme.py  toast.py  widgets.py
src/utils/: resource_loader.py
tests/: test_ai_pipeline.py  test_animation.py  test_app_config.py  test_batch_controller.py  test_batch_worker.py  test_cache_manager.py  test_danbooru_client.py  test_editor_state.py  test_image_processor.py  test_preset_manager.py  test_qt_image_canvas.py  test_qt_task_runner.py  test_task_runner.py  test_uploader.py
